Closed Bug 141673 Opened 24 years ago Closed 24 years ago

PPEmbed crashes on launch

Categories

(Core Graveyard :: Embedding: Mac, defect)

PowerPC
macOS
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0

People

(Reporter: ccarlen, Assigned: ccarlen)

Details

Attachments

(1 file)

Code that was changed in PPEmbed's CAppFileLocationProvider in the file API change is wrong. Causes a crash every time the app is launched.
Attached patch patchSplinter Review
Notice that the code added was returning a ref to a temporary variable. Just like any other object, it will be destroyed when it scope is left. You can't escape destruction just by returning a ref to something local. Simple patch just changes the buffer param to an nsACString to which we can assign and then return a ref. need review before the next day embedding smoktests are run.
Darin, can you sr= this?
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.0
Comment on attachment 81984 [details] [diff] [review] patch sr=darin (what was i thinking!)
Attachment #81984 - Flags: superreview+
Fixed. This bug was only on the trunk.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
To Dharma for verification
QA Contact: mdunn → dsirnapalli
-- verified on latest branch(2002-10-09-05-1.0) and latest trunk(2002-10-10-08-trunk). They donot crash. Marking the bug verified.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: