Bug 141673 - PPEmbed crashes on launch due to bad code added in nsIFile API change. r=pinkerton/sr=darin